additional work on mobile menu and script fix

--- a/styles/sass/_mq.scss
+++ b/styles/sass/_mq.scss
@@ -4,16 +4,23 @@
     nav {
         position: relative;
 
-        nav ul {
+        ul {
             padding-right: 5%;
             background: rgba(0, 0, 0, 0.75);
             text-align: left;
             position: absolute;
-            left: -100px;
+            transition-property: all;
+            transition-duration: 0.5s;
+            // left: -100%;
+            top: 0;
             z-index: 10;
+
             li {
-                padding: 3% 0;
+                padding: 10% 0;
+                margin: 0;
             }
+        
+            
         }
     }
 }
